feat(hw-5): make task 1

--- a/index-5.html
+++ b/index-5.html
@@ -21,6 +21,26 @@
       <div class="promo-separator"></div>
       <div class="promo-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
     </div>
+
+    <div class="vertical">
+      <div class="container">
+        <div class="vertical-row">
+          <div class="vertical-column">
+            <div class="vertical-item">
+              <div class="type">Basic</div>
+              <div class="price">$10</div>
+              <div class="slogan">Free for life</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 </body>
