feat(hw-5): make task 2-3

--- a/index-5.html
+++ b/index-5.html
@@ -25,10 +25,38 @@
     <div class="vertical">
       <div class="container">
         <div class="vertical-row">
-          <div class="vertical-column">
+          <div class="vertical-column vertical-column-link">
             <div class="vertical-item">
               <div class="type">Basic</div>
               <div class="price">$10</div>
+              <div class="slogan">Free for life</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+            </div>
+          </div>
+
+          <div class="vertical-column vertical-column-shadow">
+            <div class="vertical-item">
+              <div class="type">Optima</div>
+              <div class="price">$20</div>
+              <div class="slogan">Free for life</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+              <div class="space">1 gb of space</div>
+            </div>
+          </div>
+
+          <div class="vertical-column vertical-column-link">
+            <div class="vertical-item">
+              <div class="type">Pro</div>
+              <div class="price">$30</div>
               <div class="slogan">Free for life</div>
               <div class="space">1 gb of space</div>
               <div class="space">1 gb of space</div>
